--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,12 @@
         <input type="number" step="0.1" class="form-control" name="Age" required>
       </div>
       <div class="mb-3">
-        <label class="form-label">Weight</label>
-        <input type="number" step="0.1" class="form-control" name="Weight" required>
+        <label class="form-label">Weight(in Kg)</label>
+        <input type="number" step="0.1" class="form-control" name="Weight(in Kg)" required>
       </div>
       <div class="mb-3">
-        <label class="form-label">Height</label>
-        <input type="number" step="0.1" class="form-control" name="Height" required>
+        <label class="form-label">Height(in Cm)</label>
+        <input type="number" step="0.1" class="form-control" name="Height(in Cm)" required>
       </div>
       <div class="mb-3">
         <label class="form-label">BMI</label>
